# sqm-data

./: .gitignore  LICENSE  README.md
analysis/: classes.ipynb  data_methods.py  methods.ipynb  refacts.ipynb  visualization_methods.py
data/01-command/: class.csv  field.csv  method.csv  variable.csv
data/02-questions/: class.csv  field.csv  method.csv  variable.csv
data/03-template/: class.csv  field.csv  method.csv  variable.csv
data/04-adjusted/: class.csv  field.csv  method.csv  variable.csv
data/05-fix/: class.csv  field.csv  method.csv  variable.csv
data/06-fix/: class.csv  field.csv  method.csv  variable.csv
data/07-fix/: class.csv  field.csv  method.csv  variable.csv
data/08-fix/: class.csv  field.csv  method.csv  variable.csv
data/09-code-test/: class.csv  field.csv  method.csv  variable.csv
data/10-code-test/: class.csv  field.csv  method.csv  variable.csv
data/11-code-test/: class.csv  field.csv  method.csv  variable.csv
data/2019-01/: class.csv  field.csv  method.csv  variable.csv
data/2020-01/: class.csv  field.csv  method.csv  variable.csv
data/2020-02/: class.csv  field.csv  method.csv  variable.csv
data/2022-01/: class.csv  field.csv  method.csv  variable.csv
data/2022-02/: class.csv  field.csv  method.csv  variable.csv
mining/: Dockerfile  const.py  main.py  pyproject.toml
src/: Dockerfile  const.py  docker-compose.yml  main.py  pyproject.toml
