[tool.poetry]
name = "sqm-data"
version = "0.1.0"
description = ""
authors = ["Rafael Torres <souza.t.rafael@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
GitPython = "^3.1.27"
pandas = "^1.5.0"
ipykernel = "^6.16.0"
matplotlib = "^3.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
